UIP-1846 : fix issue where left-aligned, italic placehoolder text is cut off

--- a/packages/ui-library/src/css/mixins.scss
+++ b/packages/ui-library/src/css/mixins.scss
@@ -157,29 +157,34 @@
     -ms-text-size-adjust: $tsa;
 }
 
-@mixin placeholder-css($color, $font-weight, $padding-top, $font-style: italic) {
+@mixin placeholder-css(
+    $color,
+    $font-weight,
+    $padding-top,
+    $font-style: italic
+) {
     ::-webkit-input-placeholder {
         color: $color;
         font-weight: $font-weight;
-        padding: $padding-top 0 0;
+        padding: $padding-top 3px 0 0;
         font-style: $font-style;
     }
     :-moz-placeholder { // Firefox 18-
         color: $color;
         font-weight: $font-weight;
-        padding: $padding-top 0 0;
+        padding: $padding-top 3px 0 0;
         font-style: $font-style;
     }
     ::-moz-placeholder {  // Firefox 19+
         color: $color;
         font-weight: $font-weight;
-        padding: $padding-top 0 0;
+        padding: $padding-top 3px 0 0;
         font-style: $font-style;
     }
     :-ms-input-placeholder {
         color: $color;
         font-weight: $font-weight;
-        padding: $padding-top 0 0;
+        padding: $padding-top 3px 0 0;
         font-style: $font-style;
     }
 }
